--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,36 @@
 anyio==3.6.2
+appdirs==1.4.4
+beautifulsoup4==4.12.2
+bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+cssselect==1.2.0
+fake-useragent==1.1.3
 fastapi==0.92.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+importlib-metadata==6.6.0
+lxml==4.9.2
+parse==1.19.0
 pydantic==1.10.5
+pyee==8.2.2
+pyppeteer==1.0.2
+pyquery==2.0.0
 python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.28.2
+requests-html==0.10.0
 sniffio==1.3.0
+soupsieve==2.4.1
 starlette==0.25.0
+tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==1.26.14
 uvicorn==0.20.0
+w3lib==2.1.1
 watchfiles==0.18.1
 websockets==10.4
+zipp==3.15.0
